--- a/EzOrder(Cus)/View/Base.lproj/Main.storyboard
+++ b/EzOrder(Cus)/View/Base.lproj/Main.storyboard
@@ -398,6 +398,6 @@
         <image name="箭頭改" width="22.666666030883789" height="17.666666030883789"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="JRR-82-u7L"/>
+        <segue reference="bqS-3l-stY"/>
     </inferredMetricsTieBreakers>
 </document>
