--- a/EzOrder(Cus)/View/Search/Search.storyboard
+++ b/EzOrder(Cus)/View/Search/Search.storyboard
@@ -410,15 +410,15 @@
                                                         <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="鼎王麻辣鍋" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9HY-gY-1t4">
-                                                        <rect key="frame" x="98" y="15" width="102" height="24"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9HY-gY-1t4">
+                                                        <rect key="frame" x="98" y="27" width="0.0" height="0.0"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N0V-07-Qgc">
-                                                        <rect key="frame" x="98" y="120" width="187" height="30"/>
-                                                        <state key="normal" title="新竹縣竹北市光明一路93號">
+                                                        <rect key="frame" x="98" y="120" width="30" height="30"/>
+                                                        <state key="normal">
                                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
@@ -435,14 +435,14 @@
                                                             <action selector="likeButtonAction:" destination="wbo-o6-ja6" eventType="touchUpInside" id="fyf-gF-BID"/>
                                                         </connections>
                                                     </button>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="03-657-1879" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P9g-9M-qbp">
-                                                        <rect key="frame" x="98" y="84" width="93" height="18"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P9g-9M-qbp">
+                                                        <rect key="frame" x="98" y="93" width="0.0" height="0.0"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rate3" translatesAutoresizingMaskIntoConstraints="NO" id="f2C-b5-jyK">
-                                                        <rect key="frame" x="98" y="47" width="80" height="16"/>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="f2C-b5-jyK">
+                                                        <rect key="frame" x="98" y="35" width="80" height="16"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="f2C-b5-jyK" secondAttribute="height" multiplier="5:1" id="S07-4m-OXj"/>
                                                         </constraints>
@@ -1099,7 +1099,6 @@
         <image name="Cash" width="267" height="267"/>
         <image name="donut" width="41" height="50"/>
         <image name="link" width="208.33332824707031" height="208.33332824707031"/>
-        <image name="rate3" width="415" height="85.666664123535156"/>
         <image name="rate4" width="415" height="85.666664123535156"/>
         <image name="商家" width="36" height="36"/>
         <image name="地址" width="83" height="83"/>
