--- a/EzOrder(Cus)/View/Search/Search.storyboard
+++ b/EzOrder(Cus)/View/Search/Search.storyboard
@@ -342,7 +342,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xbo-4i-gwb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2393" y="-582"/>
+            <point key="canvasLocation" x="2392.8000000000002" y="-582.45877061469275"/>
         </scene>
         <!--StoreinformationView Controller-->
         <scene sceneID="RZu-PB-YBh">
