推播完成，推播跳轉頁面完成，可以正常釋放跳轉前的記憶體。

--- a/EzOrder(Cus)/View/Base.lproj/Main.storyboard
+++ b/EzOrder(Cus)/View/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="FW5-XW-A3O">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="4zT-QS-40P" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="tabBar" automaticallyAdjustsScrollViewInsets="NO" id="4zT-QS-40P" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="HpB-EE-8op">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
